buildscript {
    repositories {
        // These repositories are only for Gradle plugins, put any other repositories in the repository block further below
        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
        mavenCentral()
    }
    dependencies {
        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
        classpath 'org.ow2.asm:asm:9.6'
    }
}


plugins {
    id 'eclipse'
    id 'idea'
    id 'net.minecraftforge.gradle' version '[6.0.16,6.2)'
}

import org.objectweb.asm.*
import java.util.jar.*

//jar.doLast {
//    // 获取生成的 jar 文件路径
//    File jarFile = archiveFile.get().asFile
//    println "正在移除预览版标记: ${jarFile.name}..."
//
//    // 创建一个临时文件
//    File tempFile = new File(jarFile.parent, jarFile.name + ".temp")
//
//    // 这里的逻辑就是把你 Main.java 里的代码翻译成了 Groovy
//    try (JarFile jar = new JarFile(jarFile);
//         JarOutputStream jos = new JarOutputStream(new FileOutputStream(tempFile))) {
//
//        Enumeration<JarEntry> entries = jar.entries()
//        while (entries.hasMoreElements()) {
//            JarEntry entry = entries.nextElement()
//            InputStream is = jar.getInputStream(entry)
//
//            if (!entry.getName().endsWith(".class")) {
//                jos.putNextEntry(new JarEntry(entry.getName()))
//                is.transferTo(jos)
//                continue
//            }
//
//            // ASM 读取和修改
//            ClassReader cr = new ClassReader(is)
//            ClassWriter cw = new ClassWriter(0)
//
//            // 自定义 Visitor
//            ClassVisitor cv = new ClassVisitor(Opcodes.ASM9, cw) {
//                @Override
//                void visit(int version, int access, String name, String signature, String superName, String[] interfaces) {
////                    int newVersion = version & ~Opcodes.V_PREVIEW
//                    super.visit(Opcodes.V17, access, name, signature, superName, interfaces)
//                }
//            }
//
//            cr.accept(cv, 0)
//
//            JarEntry newEntry = new JarEntry(entry.getName())
//            jos.putNextEntry(newEntry)
//            jos.write(cw.toByteArray())
//        }
//    }
//    if (jarFile.delete()) {
//        if (!tempFile.renameTo(jarFile)) {
//            throw new RuntimeException("无法重命名临时文件！")
//        }
//        println "预览版标记移除成功！"
//    } else {
//        throw new RuntimeException("无法删除原始 Jar 文件！")
//    }
//}

tasks.named('compileJava') {
    doLast {

        File classesDir = file("$buildDir/classes/java/main")
        if (!classesDir.exists()) {
            return
        }
        println "正在更新版本号"
        int transformedCount = 0
        fileTree(classesDir).matching {
            include '**/*.class'
        }.each { File classFile ->
            byte[] classBytes = classFile.readBytes()
            ClassReader cr = new ClassReader(classBytes)
            ClassWriter cw = new ClassWriter(0)
            ClassVisitor cv = new ClassVisitor(Opcodes.ASM9, cw) {
                @Override
                void visit(int version, int access, String name, String signature, String superName, String[] interfaces) {
                    super.visit(Opcodes.V17, access, name, signature, superName, interfaces)
                }
            }
            cr.accept(cv, 0)

            classFile.bytes = cw.toByteArray()
            transformedCount++
        }
        println "版本号更新完成"
    }
}


apply plugin: 'org.spongepowered.mixin'


group = mod_group_id
version = mod_version

def isGitHubActions = System.getenv("GITHUB_ACTIONS") == "true"
def isWindows = System.getProperty("os.name").toLowerCase().contains("windows")
def isLinux = System.getProperty("os.name").toLowerCase().contains("linux")

tasks.register("compileNativeLib", Exec) {
    group = "build"
    onlyIf { isWindows }

    def cppSource = layout.projectDirectory.file("acceleratedRecoilingLib.cpp")
    def dllOutput = layout.projectDirectory.file("build/acceleratedRecoilingLib.dll")
    inputs.file(cppSource)
    outputs.file(dllOutput)
    workingDir = layout.projectDirectory.asFile
    doFirst {
        File bDir = new File(getWorkingDir(), "build")
        if (!bDir.exists()) bDir.mkdirs()
        if (isGitHubActions) {
            def javaHome = System.getenv("JAVA_HOME")
            commandLine 'cmd', '/c', """cl.exe /std:c++latest /O2 /fp:fast /arch:AVX2 /openmp /LD /DAR_ENABLE_JNI /I"${javaHome}\\include" /I"${javaHome}\\include\\win32" /MD /Zi /W3 acceleratedRecoilingLib.cpp /Fe"build\\acceleratedRecoilingLib.dll" /Fd"build\\acceleratedRecoilingLib.pdb" /link /OPT:REF /OPT:ICF"""
        } else {
            def vcvarsScript = "I:\\vs\\VC\\Auxiliary\\Build\\vcvars64.bat"
            commandLine 'cmd', '/c', """call "${vcvarsScript}" && cl.exe /std:c++latest /O2 /fp:fast /arch:AVX2 /openmp /LD /DAR_ENABLE_JNI /I.\\jdk\\corretto-21.0.10\\include /I.\\jdk\\corretto-21.0.10\\include\\win32 /MD /Zi /W3 /I"E:\\qucistart\\acceleratedrecoilingnative" acceleratedRecoilingLib.cpp /Fe"build\\acceleratedRecoilingLib.dll" /Fd"build\\acceleratedRecoilingLib.pdb" /link /OPT:REF /OPT:ICF"""
        }
        println "正在编译 acceleratedRecoilingLib.dll ..."
    }
}
// 2. 编译 Linux 的 .so
tasks.register("compileNativeLibLinux", Exec) {
    group = "build"
    onlyIf { isWindows || isLinux }
    def cppSource = layout.projectDirectory.file("acceleratedRecoilingLib.cpp")
    def soOutput = layout.projectDirectory.file("build/libacceleratedRecoilingLib.so")
    inputs.file(cppSource)
    outputs.file(soOutput)
    workingDir = layout.projectDirectory.asFile
    doFirst {
        File bDir = new File(getWorkingDir(), "build")
        if (!bDir.exists()) bDir.mkdirs()
        if (isGitHubActions && isLinux) {
            def javaHome = System.getenv("JAVA_HOME")
            commandLine 'bash', '-c', """g++ -std=c++20 -O3 -ffast-math -DAR_ENABLE_JNI -I"${javaHome}/include" -I"${javaHome}/include/linux" -mavx2 -fopenmp -shared -fPIC acceleratedRecoilingLib.cpp -o build/libacceleratedRecoilingLib.so"""
        } else {
            commandLine 'wsl', 'bash', '-c', """g++ -std=c++20 -O3 -ffast-math -DAR_ENABLE_JNI -I./jdk/corretto-21.0.10/include -I./jdk/corretto-21.0.10/include/linux -mavx2 -fopenmp -shared -fPIC acceleratedRecoilingLib.cpp -o build/libacceleratedRecoilingLib.so"""
        }
        println "正在编译 libacceleratedRecoilingLib.so ..."
    }
}
tasks.named('processResources', ProcessResources) {
    dependsOn 'compileNativeLib'
    dependsOn 'compileNativeLibLinux'
    from(layout.projectDirectory.file("build/acceleratedRecoilingLib.dll")) {
        into ""
    }
    from(layout.projectDirectory.file("build/libacceleratedRecoilingLib.so")) {
        into ""
    }
}
base {
    archivesName = mod_id
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(21)
}



minecraft {
    // The mappings can be changed at any time and must be in the following format.
    // Channel:   Version:
    // official   MCVersion             Official field/method names from Mojang mapping files
    // parchment  YYYY.MM.DD-MCVersion  Open community-sourced parameter names and javadocs layered on top of official
    //
    // You must be aware of the Mojang license when using the 'official' or 'parchment' mappings.
    // See more information here: https://github.com/MinecraftForge/MCPConfig/blob/master/Mojang.md
    //
    // Parchment is an unofficial project maintained by ParchmentMC, separate from MinecraftForge
    // Additional setup is needed to use their mappings: https://parchmentmc.org/docs/getting-started
    //
    // Use non-default mappings at your own risk. They may not always work.
    // Simply re-run your setup task after changing the mappings to update your workspace.
    mappings channel: mapping_channel, version: mapping_version

    // When true, this property will have all Eclipse/IntelliJ IDEA run configurations run the "prepareX" task for the given run configuration before launching the game.
    // In most cases, it is not necessary to enable.
    // enableEclipsePrepareRuns = true
    // enableIdeaPrepareRuns = true

    // This property allows configuring Gradle's ProcessResources task(s) to run on IDE output locations before launching the game.
    // It is REQUIRED to be set to true for this template to function.
    // See https://docs.gradle.org/current/dsl/org.gradle.language.jvm.tasks.ProcessResources.html
    copyIdeResources = true

    // When true, this property will add the folder name of all declared run configurations to generated IDE run configurations.
    // The folder name can be set on a run configuration using the "folderName" property.
    // By default, the folder name of a run configuration is the name of the Gradle project containing it.
    // generateRunFolders = true

    // This property enables access transformers for use in development.
    // They will be applied to the Minecraft artifact.
    // The access transformer file can be anywhere in the project.
    // However, it must be at "META-INF/accesstransformer.cfg" in the final mod jar to be loaded by Forge.
    // This default location is a best practice to automatically put the file in the right place in the final jar.
    // See https://docs.minecraftforge.net/en/latest/advanced/accesstransformers/ for more information.
    // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')

    // Default run configurations.
    // These can be tweaked, removed, or duplicated as needed.
    runs {
        // applies to all the run configs below
        configureEach {
            workingDirectory project.file('run')

            // Recommended logging data for a userdev environment
            // The markers can be added/remove as needed separated by commas.
            // "SCAN": For mods scan.
            // "REGISTRIES": For firing of registry events.
            // "REGISTRYDUMP": For getting the contents of all registries.
            property 'forge.logging.markers', 'REGISTRIES'


            // Recommended logging level for the console
            // You can set various levels here.
            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
            property 'forge.logging.console.level', 'debug'

            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }

        client {
            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
            property 'forge.enabledGameTestNamespaces', mod_id
            jvmArg '--enable-preview'
        }

        server {
            property 'forge.enabledGameTestNamespaces', mod_id
            args '--nogui'
            jvmArg '--enable-preview'
        }

        // This run config launches GameTestServer and runs all registered gametests, then exits.
        // By default, the server will crash when no gametests are provided.
        // The gametest system is also enabled by default for other run configs under the /test command.
        gameTestServer {
            property 'forge.enabledGameTestNamespaces', mod_id
            jvmArg '--enable-preview'
        }

        data {
            // example of overriding the workingDirectory set in configureEach above
            workingDirectory project.file('run-data')
            jvmArg '--enable-preview'

            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
        }
    }
}


mixin {
    add sourceSets.main, "${mod_id}.refmap.json"

    config "${mod_id}.mixins.json"
}

jar {
    manifest {
        attributes([
                // 确保 MixinConfigs 包含了你的配置
                "MixinConfigs": "acceleratedrecoiling.mixins.json"
        ])
    }
}


// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    // Put repositories for dependencies here
    // ForgeGradle automatically adds the Forge maven and Maven Central for you

    // If you have mod jar dependencies in ./libs, you can declare them as a repository like so.
    // See https://docs.gradle.org/current/userguide/declaring_repositories.html#sub:flat_dir_resolver
    // flatDir {
    //     dir 'libs'
    // }
}

dependencies {

    annotationProcessor 'io.github.llamalad7:mixinextras-common:0.5.0'

    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.5.0"))
    implementation(jarJar("io.github.llamalad7:mixinextras-forge:0.5.0")) {
        jarJar.ranged(it, "[0.5.0,)")
    }


    // Specify the version of Minecraft to use.
    // Any artifact can be supplied so long as it has a "userdev" classifier artifact and is a compatible patcher artifact.
    // The "userdev" classifier will be requested and setup by ForgeGradle.
    // If the group id is "net.minecraft" and the artifact id is one of ["client", "server", "joined"],
    // then special handling is done to allow a setup of a vanilla dependency without the use of an external repository.
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"

    // Example mod dependency with JEI - using fg.deobf() ensures the dependency is remapped to your development mappings
    // The JEI API is declared for compile time use, while the full JEI artifact is used at runtime
    // compileOnly fg.deobf("mezz.jei:jei-${mc_version}-common-api:${jei_version}")
    // compileOnly fg.deobf("mezz.jei:jei-${mc_version}-forge-api:${jei_version}")
    // runtimeOnly fg.deobf("mezz.jei:jei-${mc_version}-forge:${jei_version}")

    // Example mod dependency using a mod jar from ./libs with a flat dir repository
    // This maps to ./libs/coolmod-${mc_version}-${coolmod_version}.jar
    // The group id is ignored when searching -- in this case, it is "blank"
    // implementation fg.deobf("blank:coolmod-${mc_version}:${coolmod_version}")

    annotationProcessor 'org.spongepowered:mixin:0.8.7:processor'

    // For more info:
    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
    // http://www.gradle.org/docs/current/userguide/dependency_management.html

}

// This block of code expands all declared replace properties in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
// When "copyIdeResources" is enabled, this will also run before the game launches in IDE environments.
// See https://docs.gradle.org/current/dsl/org.gradle.language.jvm.tasks.ProcessResources.html
tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [minecraft_version   : minecraft_version, minecraft_version_range: minecraft_version_range,
                             forge_version       : forge_version, forge_version_range: forge_version_range,
                             loader_version_range: loader_version_range,
                             mod_id              : mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version,
                             mod_authors         : mod_authors, mod_description: mod_description,]

    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}

// Example for how to get properties into the manifest for reading at runtime.
tasks.named('jar', Jar).configure {
    manifest {
        attributes(["Specification-Title"     : mod_id,
                    "Specification-Vendor"    : mod_authors,
                    "Specification-Version"   : "1", // We are version 1 of ourselves
                    "Implementation-Title"    : project.name,
                    "Implementation-Version"  : project.jar.archiveVersion,
                    "Implementation-Vendor"   : mod_authors,
                    "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")])
    }

    // This is the preferred method to reobfuscate your jar file
    finalizedBy 'reobfJar'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
    options.compilerArgs += "--enable-preview"
}
